[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects and Functionalities/Dice.gd" type="Script" id=1]
[ext_resource path="res://assets/dice/dieRed1.png" type="Texture" id=2]
[ext_resource path="res://assets/dice/dieRed2.png" type="Texture" id=3]
[ext_resource path="res://assets/dice/dieRed3.png" type="Texture" id=4]
[ext_resource path="res://assets/dice/dieRed4.png" type="Texture" id=5]
[ext_resource path="res://assets/dice/dieRed5.png" type="Texture" id=6]
[ext_resource path="res://assets/dice/dieRed6.png" type="Texture" id=7]


[node name="Dice" type="Node2D"]

position = Vector2( 962.772, 240.693 )
script = ExtResource( 1 )

[node name="dice_1" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="dice_2" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )

[node name="dice_3" type="Sprite" parent="." index="2"]

texture = ExtResource( 4 )

[node name="dice_4" type="Sprite" parent="." index="3"]

texture = ExtResource( 5 )

[node name="dice_5" type="Sprite" parent="." index="4"]

texture = ExtResource( 6 )

[node name="dice_6" type="Sprite" parent="." index="5"]

texture = ExtResource( 7 )


